Build artifacts in root directory of S3

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,4 +16,5 @@ phases:
 # Include only the files required for your application to run.
 artifacts:
   files:
-    - build/*
+    - '**/*'
+  base-directory: 'build'
