Try recursively grabbing only files in build

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,6 +16,4 @@ phases:
 # Include only the files required for your application to run.
 artifacts:
   files:
-    - '**/*'
-  base-directory: 'build'
-  discard-paths: yes
+    - './build/**/*'
