--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,4 +16,6 @@ phases:
 # Include only the files required for your application to run.
 artifacts:
   files:
-    - './build/**/*'
+    - '**/*'
+  base-directory: 'build'
+  name: '/'
